--- a/sample_code/Python/Dockerfile
+++ b/sample_code/Python/Dockerfile
@@ -1,2 +1,9 @@
 FROM python:3.11.4
 
+RUN mkdir /app
+
+COPY ./src/* /app
+
+# RUN --network=host python src/sample_client.py
+
+ENTRYPOINT ["python", "/app/sample_client.py"]
