--- a/.github/workflows/build-team-image.yaml
+++ b/.github/workflows/build-team-image.yaml
@@ -89,3 +89,17 @@ jobs:
           file: Teams/${{ matrix.team }}/Dockerfile
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
+
+  cleanup-images:
+    name: Cleanup untagged images from ghcr
+    if: ${{ github.event_name == 'push' }}
+    runs-on: ubuntu-latest
+    needs: find-team-changes
+    steps:
+
+      - name: 🗑️ Cleanup old untagged images
+        uses: dylanratcliffe/delete-untagged-containers@v1.2.3
+        with:
+          org: ${{ github.repository_owner }}
+          token: ${{ secrets.HACKTOBERFEST2023_PAT }}
+          package_name: 'hacktoberfest-2023'
