--- a/Teams/purple_saints/Dockerfile
+++ b/Teams/purple_saints/Dockerfile
@@ -1,5 +1,15 @@
 FROM node:16.6.1
 
+RUN apt-get update && \
+    apt-get install -y \
+    build-essential \
+    libcairo2-dev \
+    libpango1.0-dev \
+    libjpeg-dev \
+    libgif-dev \
+    librsvg2-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -8,6 +18,6 @@ RUN npm install
 
 COPY . .
 
-RUN npx tsc src/first.ts
+RUN npx tsc src/*.ts
 
-CMD ["node", "src/first.js"]
+CMD ["node", "src/index.js"]
