--- a/Teams/white_dodgers/Dockerfile
+++ b/Teams/white_dodgers/Dockerfile
@@ -1,8 +1,9 @@
-FROM subfuzion/netcat
+FROM python:3.11.4
 
-ENV X=5
-ENV Y=725
-ENV COLOR=e6e3e6
+RUN mkdir /app
 
-ENTRYPOINT sh -c "echo -en 'PX ${X} ${Y} ${COLOR}\n' | nc -q1 localhost 1234"
-CMD []
+COPY ./src/* /app
+
+# RUN --network=host python src/sample_client.py
+
+ENTRYPOINT ["python", "/app/sample_client.py"]
