--- a/Teams/green_twins/Dockerfile
+++ b/Teams/green_twins/Dockerfile
@@ -1,8 +1,9 @@
-FROM subfuzion/netcat
+FROM python:3.11.4
 
-ENV X=1285
-ENV Y=5
-ENV COLOR=02d10c
+RUN mkdir /app
 
-ENTRYPOINT sh -c "echo -en 'PX ${X} ${Y} ${COLOR}\n' | nc -q1 localhost 1234"
-CMD []
+COPY ./src/* /app
+
+# RUN --network=host python src/sample_client.py
+
+ENTRYPOINT ["python", "/app/color_spectrum.py"]
