feat: :sparkles: integrate cleanup method

--- a/Teams/red_titans/Dockerfile
+++ b/Teams/red_titans/Dockerfile
@@ -14,6 +14,6 @@ RUN . .venv/bin/activate && pip install --upgrade Pillow
 COPY src/ src/
 
 #CMD [ "python", "./Challenge1.py"]
-CMD [ "/usr/app/.venv/bin/python3", "/usr/app/src/RedBackground.py"]
+#CMD [ "/usr/app/.venv/bin/python3", "/usr/app/src/RedBackground.py"]
 CMD [ "/usr/app/.venv/bin/python3", "/usr/app/src/simple_client.py"]
 
