--- a/Teams/red_titans/docker-compose.yml
+++ b/Teams/red_titans/docker-compose.yml
@@ -7,4 +7,5 @@ services:
     network_mode: host
     volumes:
       - ./src/:/usr/app/src/
+    #command: "/usr/app/.venv/bin/python3 /usr/app/src/simple_client.py"
     command: "/usr/app/.venv/bin/python3 /usr/app/src/simple_client.py"
