--- a/Teams/red_titans/Dockerfile
+++ b/Teams/red_titans/Dockerfile
@@ -1,11 +1,13 @@
 FROM eclipse-temurin:17-jdk-jammy as build
 
-COPY src/SampleClient.java /src/
-RUN javac /src/SampleClient.java && ls -al /src
+COPY src/Inception.java /src/
+COPY src/inception.png /src/
+RUN javac /src/Inception.java && ls -al /src
 
 FROM eclipse-temurin:17-jdk-jammy
 
 COPY --from=build src/*.class /app/
 
-ENTRYPOINT cd app && java SampleClient
+ENTRYPOINT cd app && java Inception
+
 
