--- a/Teams/red_titans/docker-compose.yml
+++ b/Teams/red_titans/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       dockerfile: Dockerfile
     network_mode: host
     volumes:
-      - ./src/:/usr/app/src/
+      - ./src/:/src/
     #command: "/usr/app/.venv/bin/python3 /usr/app/src/simple_client.py"
-    command: "/usr/app/.venv/bin/python3 /usr/app/src/simple_client.py"
+    command: "python3 /src/simple_client.py"
